# 3-30-300-analysis

./: .Renviron.example  .env.example  .gitignore  .lintr  3-30-300_modelling.R  3-30-300_plots.R  404.html  EGU_plots.R  LICENSE  README.md  Relative Risk plot.R  constants.R  environment.yml  fingertipsR.R  foresttools_try.R  index.html  lidr.R  lidr_meta_CHM.R  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
3-30-300-analysis/aggregated_demo/: index.html
3-30-300-analysis/spectral/: index.html
3-30-300-analysis/t3/: index.html
3-30-300-analysis/t30/: index.html
3-30-300-analysis/t300/: index.html
3-30-300-analysis/tables_setup/: index.html
3-30-300-analysis/tree_count/: index.html
3-30-300-analysis/tree_demo/: index.html
R/: 3-30-300_modelling.R  London_analysis.R  Relative Risk plot.R  chm_processing.R  constants.R  data_analysis.R  data_modelling.R  data_processing.R
R/utils/: constants.R  paths.R  project_setup.R
docs/: index.md
docs/3-30-300-analysis/: aggregated_demo.md  spectral.md  t3.md  t30.md  t300.md  tables_setup.md  tree_count.md  tree_demo.md
docs/3-30-300-analysis/utils/: paths.md  (+7 more)
notebooks/: 3-30-300_processing.ipynb  T300_calculation.ipynb  T30_calculation.ipynb  T3_calculation.ipynb  VOM_processing.ipynb  city_plotting.ipynb  data_verification.ipynb  efm_testing.ipynb  example_code.ipynb  gini_modelling.ipynb  health_data_processing.ipynb  ndvi_processing.ipynb  osm_extract.ipynb  pyspark_processing.ipynb  raster_operations.ipynb  samgeo.ipynb  sedona_processing.ipynb  spectral_index_processing.ipynb  test_notebook.ipynb  vector_operations.ipynb
scripts/: 3-30-300_processing.ipynb  3-30-300_processing.py  T300_calculation.py  T30_calculation.py  T3_calculation.py  chm_processing.R  clean_health_imd_data.py  constants.py  data_analysis.R  data_modelling.R  imd_geography_processing.py  install_jdk.py  logging_config.py  ndvi_processing.py  process_vom.py  raster_operations.py  sedona_config.py  sparklyr_processing.R  spectral_index_processing.py  utils.py  vector_operations.py  vom_scraping.py  vom_trees_to_geoparquet.py  water_calculation.py
src/: __init__.py  clip_data.py  main.py  spectral.py  spectral_download.py  t3.py  t30.py  t300.py  t3_300_metrics.py  t3_30_300_spectral.py  tables_setup.py  tree_count.py  vom_trees_helper.py
src/utils/: __init__.py  constants.py  data_processing.py  install_jdk.py  logging_config.py  paths.py  sedona_config.py  sedona_rdd.py  vom_processing.py
(+8 files in other folders)
