[tool.poetry]
name = "3-30-300-analysis"
version = "0.1.0"
description = ""
authors = ["Andrés Camilo Zúñiga-González <ancazugo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-sedona = "^1.7.0"
geopandas = "^1.0.1"
rioxarray = "^0.18.1"
python-dotenv = "^1.0.1"
osmnx = "^2.0.0"
tqdm = "^4.67.1"
gdal = "3.8.4"
pyspark = "^3.5.3"
ipykernel = "^6.29.5"
cartopy = "^0.24.1"
scipy = "^1.14.1"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
