[tool.poetry]
name = "3-30-300-analysis"
version = "0.1.0"
description = ""
authors = ["Andrés Camilo Zúñiga-González <ancazugo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-sedona = {extras = ["spark"], version = "^1.7.0"}
geopandas = "^1.0.1"
rioxarray = "^0.18.1"
python-dotenv = "^1.0.1"
osmnx = "^2.0.0"
tqdm = "^4.67.1"
gdal = "3.10.0"
pyspark = "^3.5.3"
ipykernel = "^6.29.5"
cartopy = "^0.24.1"
scipy = "^1.14.1"
pyarrow = "^18.1.0"
rasterstats = "^0.20.0"
install-jdk = "^1.1.0"
xee = "^0.0.19"
dask = {extras = ["distributed"], version = "^2024.12.0"}
earthengine-api = "^1.4.3"
geemap = "^0.35.1"
eemont = "^0.3.6"
spyndex = "^0.6.0"
earthpy = "^0.9.4"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
xbatcher = "^0.4.0"
owslib = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
