[project]
name = "3-30-300-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-sedona[kepler-map,pydeck-map]>=1.7.1",
    "cartopy>=0.24.1",
    "earthengine-api>=1.5.9",
    "eemont>=0.3.6",
    "gdal==3.10.0",
    "geemap>=0.35.3",
    "geopandas>=1.0.1",
    "install-jdk>=1.1.0",
    "ipykernel>=6.29.5",
    "osmnx>=2.0.2",
    "pyarrow>=19.0.1",
    "pyspark>=3.5.5",
    "python-dotenv>=1.1.0",
    "rasterstats>=0.20.0",
    "rioxarray>=0.18.2",
    "scipy>=1.15.2",
    "setuptools>=78.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
    "pipdeptree>=2.26.0",
    "pyan3==1.1.1",
    "pydeps>=3.0.1",
    "pyflowchart>=0.3.1",
    "pylint>=3.3.6",
    "ruff>=0.11.5",
]
